
add_executable(0jjalloc_test 0jjalloc_test.cc)

add_executable(2lower_upwer_test 2lower_upwer_test.cc)

add_executable(3string_test 3string_test.cc)

add_executable(4vector_test 4vector_test.cc)

add_executable(5list_test 5list_test.cc)

add_executable(6deque_test 6deque_test.cc)

add_executable(7stack_test 7stack_test.cc)

add_executable(8queue_test 8queue_test.cc)

add_executable(9heap_test 9heap_test.cc)

add_executable(9priority_queue_test 9priority_queue_test.cc)

add_executable(10slist_test 10slist_test.cc)

add_executable(11rbtree_test 11rbtree_test.cc)

add_executable(12set_test 12set_test.cc)

add_executable(13multiset_test 13multiset_test.cc)

add_executable(14map_test 14map_test.cc)

add_executable(15multimap_test 15multimap_test.cc)

add_executable(16hashtable_test 16hashtable_test.cc)